[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.162",features = ["derive"] }
serde_json = "1.0.96"
ureq = "2.6.2"
thiserror = "1.0.40"
dotenv = "0.15.0"