[package]
name = "app"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
api = {path = "../api"}
chrono = "0.4"
eframe = "0.21.3"
egui-datepicker = "0.3.0"
egui_extras = "0.21.0"
env_logger = "0.10.0"

