[package]
name = "yumD"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
db_manager={path="../db_manager"}
api = {path = "../api"}
chrono = "0.4"
confy = "0.5.1"
eframe = "0.21.3"
egui-datepicker = "0.3.0"
egui_extras = "0.21.0"
env_logger = "0.10.0"
futures = "0.3.28"
serde = "1.0.162"
serde_derive = "1.0.162"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"
diesel = {version = "2.0.4", features = ["postgres"] }
